--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,13 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <link href="https://demo.dashboardpack.com/architectui-html-free/main.css" rel="stylesheet">
   </head>
 
   <body>
+  <% if user_signed_in? %>
+    <%= render partial: '/nav', formats: :html %>
+  <% end %>
 
   <% if notice.present? %>
     <p class="alert alert-primary"><%= notice %></p>
@@ -18,6 +22,6 @@
   <% if alert.present? %>
     <p class="alert alert-danger"><%= alert %></p>
   <% end %>
-  <%= yield %>
+    <%= yield %>
   </body>
 </html>
