--- a/app/views/manager/dashboard/index.html.erb
+++ b/app/views/manager/dashboard/index.html.erb
@@ -1,4 +1,3 @@
-<div class="container container-fluid" style="margin-top:20px">
-  <%= render '/common/stats' %>
-  <%= render '/common/appointments' %>
-</div>
+<%= render '/common/stats' %>
+<%= render '/common/appointments' %>
+<%= render '/common/leadform' %>
