--- a/app/views/_nav.html.erb
+++ b/app/views/_nav.html.erb
@@ -8,10 +8,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav">
-        <a href="#" class="nav-item nav-link active">Home</a>
-        <a href="#" class="nav-item nav-link">Units</a>
-        <a href="#" class="nav-item nav-link">Leasings</a>
-        <a href="#" class="nav-item nav-link" tabindex="-1">Invoices</a>
+        <a href="<%= manager_root_path %>" class="nav-item nav-link active">Home</a>
+        <a href="<%= manager_units_path %>" class="nav-item nav-link">Units</a>
+        <a href="<%= manager_leases_path %>" class="nav-item nav-link">Leasings</a>
+        <a href="<%= manager_invoices_path %>" class="nav-item nav-link" tabindex="-1">Invoices</a>
       </div>
       <div class="navbar-nav ms-auto">
 
